@@ -55,7 +55,7 @@ local incremental_movement_speed = 0.075
 
 -- Misc settings
 local vision_distance = 30
-local pollution_to_join_attack = 150
+local pollution_to_join_attack = 100
 local distraction_cooldown = 20
 
 -- Animation Settings
