@@ -52,7 +52,7 @@ local incremental_movement_speed = 0.075
 
 -- Misc settings
 local vision_distance = 35
-local pollution_to_join_attack = 500
+local pollution_to_join_attack = 400
 local distraction_cooldown = 20
 
 -- Animation Settings
